# raspi_rubiks

./: README.md
PSoC_MotorControl/: main.c
raspi_rubiks/: CMakeCache.txt  CMakeLists.txt  CameraVertices.hpp  ColorDetection.hpp  CubeDisplay.hpp  HSVrange.hpp  Makefile  average_calc.h  cmake_install.cmake  main  main.cpp  readme.txt  solution.txt
raspi_rubiks/solving_algorithm/: Combinatorics.cpp  Combinatorics.hpp  Cube.cpp  Cube.hpp  CubeParser.cpp  CubeParser.hpp  Demo.layout  FaceletCube.cpp  FaceletCube.hpp  KociMoveTables.hpp  MoveTable.cpp  MoveTable.hpp  PruningTable.cpp  PruningTable.hpp  RubiksCube.cpp  RubiksCube.hpp  Solver.cpp  Solver.hpp  Vector.cpp  Vector.hpp
